--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 ---
 gateway:
-  port: 8383
+  port: 8080
   path: /events
 
 directory:
@@ -12,11 +12,11 @@ directory:
 auth0:
   domain: <auth0 domain name>
   client_id: <auth0 client id>
-  client_secret: <authj0 client secret>
+  client_secret: <auth0 client secret>
 
 loader:
-  bin_path: /app/auth0-gw/bin
-  template: /app/auth0-gw/templates/transform.tmpl
+  bin_path: /app
+  template: /app/tmpl/transform.tmpl
 
 scheduler:
   interval: 15m
