--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -127,40 +127,16 @@ dockers:
       - "--label=org.opencontainers.image.description=Auth0 Gateway"
       - "--label=org.opencontainers.image.licenses=Apache-2.0"
     extra_files:
-      - "config.yaml"
-      - "templates/transform.tmpl"
       - "bin/amd64/ds-load"
       - "bin/amd64/ds-load-auth0"
   
-  - use: buildx
-    goos: linux
-    goarch: arm64
-    image_templates:
-      - &arm64-image "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Version }}-arm64"
-    skip_push: false
-    dockerfile: Dockerfile.goreleaser
-    build_flag_templates:
-      - "--platform=linux/arm64/v8"
-      - "--label=org.opencontainers.image.created={{.Date}}"
-      - "--label=org.opencontainers.image.title={{.ProjectName}}"
-      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
-      - "--label=org.opencontainers.image.version={{.Version}}"
-      - "--label=org.opencontainers.image.source=https://github.com/{{ .Env.ORG }}/{{ .Env.REPO }}"
-      - "--label=org.opencontainers.image.description=Auth0 Gateway"
-      - "--label=org.opencontainers.image.licenses=Apache-2.0"
-    extra_files:
-      - "config.yaml"
-      - "templates/transform.tmpl"
-      - "bin/amd64/ds-load"
-      - "bin/amd64/ds-load-auth0"
-
 docker_manifests:
   # https://goreleaser.com/customization/docker_manifest/
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:latest"
-    image_templates: [*amd64-image, *arm64-image]
+    image_templates: [*amd64-image]
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Major }}"
-    image_templates: [*amd64-image, *arm64-image]
+    image_templates: [*amd64-image]
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Major }}.{{ .Minor }}"
-    image_templates: [*amd64-image, *arm64-image]
+    image_templates: [*amd64-image]
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Major }}.{{ .Minor }}.{{ .Patch }}"
-    image_templates: [*amd64-image, *arm64-image]
+    image_templates: [*amd64-image]
