--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -8,6 +8,13 @@ env:
 before:
   # https://goreleaser.com/customization/hooks/
   hooks:
+  - rm -rf bin
+  - mkdir -p bin/amd64
+  - mkdir -p bin/arm64go
+  - gh release download --repo github.com/aserto-dev/ds-load --pattern 'ds-load_*linux_x86_64*' --clobber --output bin/ds-load-amd64.zip
+  - gh release download --repo github.com/aserto-dev/ds-load --pattern 'ds-load_*linux_arm64*' --clobber --output bin/ds-load-arm64.zip
+  - unzip bin/ds-load-amd64.zip -d bin/amd64
+  - unzip bin/ds-load-arm64.zip -d bin/arm64
 
 builds:
   # https://goreleaser.com/customization/build/
@@ -33,9 +40,7 @@ builds:
       - -X github.com/{{ .Env.ORG }}/{{ .Env.REPO }}/pkg/version.commit={{.ShortCommit}}
       - -X github.com/{{ .Env.ORG }}/{{ .Env.REPO }}/pkg/version.date={{.Date}}
     mod_timestamp: "{{ .CommitTimestamp }}"
-    hooks:
-      post:
-        -  
+
   - id: auth0-gwc
     main: ./cmd/auth0-gwc
     binary: auth0-gwc
@@ -116,7 +121,7 @@ dockers:
     image_templates:
       - &amd64-image "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Version }}-amd64"
     skip_push: false
-    dockerfile: Dockerfile.goreleaser
+    dockerfile: Dockerfile.goreleaser.amd64
     build_flag_templates:
       - "--platform=linux/amd64"
       - "--label=org.opencontainers.image.created={{.Date}}"
@@ -129,14 +134,34 @@ dockers:
     extra_files:
       - "bin/amd64/ds-load"
       - "bin/amd64/ds-load-auth0"
+
+  - use: buildx
+    goos: linux
+    goarch: arm64
+    image_templates:
+      - &arm64-image "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Version }}-arm64"
+    skip_push: false
+    dockerfile: Dockerfile.goreleaser.arm64
+    build_flag_templates:
+      - "--platform=linux/arm64/v8"
+      - "--label=org.opencontainers.image.created={{.Date}}"
+      - "--label=org.opencontainers.image.title={{.ProjectName}}"
+      - "--label=org.opencontainers.image.revision={{.FullCommit}}"
+      - "--label=org.opencontainers.image.version={{.Version}}"
+      - "--label=org.opencontainers.image.source=https://github.com/{{ .Env.ORG }}/{{ .Env.REPO }}"
+      - "--label=org.opencontainers.image.description=Auth0 Gateway"
+      - "--label=org.opencontainers.image.licenses=Apache-2.0"
+    extra_files:
+      - "bin/arm64/ds-load"
+      - "bin/arm64/ds-load-auth0"
   
 docker_manifests:
   # https://goreleaser.com/customization/docker_manifest/
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:latest"
-    image_templates: [*amd64-image]
+    image_templates: [*amd64-image, *arm64-image]
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Major }}"
-    image_templates: [*amd64-image]
+    image_templates: [*amd64-image, *arm64-image]
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Major }}.{{ .Minor }}"
-    image_templates: [*amd64-image]
+    image_templates: [*amd64-image, *arm64-image]
   - name_template: "{{ .Env.REGISTRY }}/{{ .Env.ORG }}/{{ .Env.REPO }}:{{ .Major }}.{{ .Minor }}.{{ .Patch }}"
-    image_templates: [*amd64-image]
+    image_templates: [*amd64-image, *arm64-image]
