--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -3,20 +3,9 @@
 # https://github.com/golangci/golangci/wiki/Configuration
 
 linters-settings:
-  depguard:
-    list-type: blacklist
-    packages:
-      # logging is allowed only by zerolog
-      - github.com/sirupsen/logrus
-    packages-with-error-message:
-      - github.com/sirupsen/logrus: "logging is allowed only by zerolog"
-  dupl:
-    threshold: 100
   funlen:
     lines: 100
     statements: 80
-  gci:
-    local-prefixes: github.com/golangci/golangci-lint
   goconst:
     min-len: 2
     min-occurrences: 2
@@ -28,7 +17,7 @@ linters-settings:
       - performance
       - style
     disabled-checks:
-      - dupImport # https://github.com/go-critic/go-critic/issues/845
+      - dupImport  #  https://github.com/go-critic/go-critic/issues/845
       - ifElseChain
       - octalLiteral
       - whyNoLint
@@ -37,19 +26,14 @@ linters-settings:
     min-complexity: 18
   goimports:
     local-prefixes: github.com/golangci/golangci-lint
-  golint:
-    min-confidence: 0
-  gomnd:
-    settings:
-      mnd:
-        # don't include the "operation" and "assign"
-        checks: 
-          - argument
-          - case
-          - condition
-          - return
+  mnd:
+    checks:
+      - argument
+      - case
+      - condition
+      - return
   govet:
-    check-shadowing: true
+    shadow: true
     settings:
       printf:
         funcs:
@@ -57,104 +41,110 @@ linters-settings:
           - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
           - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
           - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
-  maligned:
-    suggest-new: true
+  lll:
+    line-length: 140
   misspell:
     locale: US
   nolintlint:
-    allow-unused: false # report any unused nolint directives
-    require-explanation: false # don't require an explanation for nolint directives
-    require-specific: false # don't require nolint directives to be specific about which linter is being skipped
+    allow-unused: false  # report any unused nolint directives
+    require-explanation: false  # don't require an explanation for nolint directives
+    require-specific: false  # don't require nolint directives to be specific about which linter is being skipped
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
   # inverted configuration with `enable-all` and `disable` is not scalable during updates of golangci-lint
-  disable-all: true
+  disable-all: false
   enable:
+    - asasalint
     - asciicheck
+    - bidichk
     - bodyclose
-    - depguard
+    - canonicalheader
+    - containedctx
+    - contextcheck
+    - copyloopvar
+    - cyclop
+    - decorder
     - dogsled
-    - errcheck
-    - exportloopref
+    - dupword
+    - durationcheck
+    - err113
+    - errchkjson
+    - errname
+    - errorlint
     - exhaustive
+    - fatcontext
+    - forcetypeassert
     - funlen
+    - gocheckcompilerdirectives
     - gochecknoinits
+    - gochecknoglobals
+    - gochecknoinits
+    - gocognit
     - goconst
     - gocritic
     - gocyclo
     - godot
-    - goerr113
     - gofmt
     - goimports
+    - gomoddirectives
     - goprintffuncname
     - gosec
-    - gosimple
-    - govet
-    - ineffassign
+    - gosmopolitan
+    - grouper
+    - importas
+    - inamedparam
+    - interfacebloat
+    - intrange
+    - lll
+    - makezero
+    - mirror
     - misspell
+    - mnd
+    - musttag
     - nakedret
+    - nestif
+    - nilerr
+    - nilnil
     - noctx
-    # - rowserrcheck # https://github.com/golangci/golangci-lint/issues/2649
-    - staticcheck
+    - nolintlint
+    - nonamedreturns
+    - perfsprint
+    - prealloc
+    - predeclared
+    - reassign
+    - rowserrcheck
     - stylecheck
     - testpackage
-    - typecheck
     - unconvert
     - unparam
-    - unused
+    - usestdlibvars
+    - wastedassign
+    - whitespace
+    - zerologlint
 
-  # don't enable:
+    # don't enable:
+    # - depguard
     # - dupl
+    # - exhaustruct
+    # - gci
+    # - ginkgolinter
     # - gochecknoglobals
     # - gocognit
     # - godox
-    # - gomnd
+    # - gofumpt
+    # - ireturn
     # - lll
-    # - nestif
+    # - nlreturn
     # - nolintlint # conflict with 1.19 gofmt changes
+    # - protogetter
     # - prealloc
     # - revive
     # - wsl
-    # - whitespace
+    # - wrapcheck
 
 issues:
-  # List of regexps of issue texts to exclude, empty list by default.
-  # But independently from this option we use default exclude patterns,
-  # it can be disabled by `exclude-use-default: false`. To list all
-  # excluded by default patterns execute `golangci-lint run --help`
-  exclude:
-  - declaration of "(err|ctx)" shadows declaration at
-  - shadow of imported from 'github.com/stretchr/testify/assert' package 'assert'
-  # Excluding configuration per-path, per-linter, per-text and per-source
   exclude-rules:
-    - path: _test\.go
-      linters:
-      - gomnd
-    # https://github.com/go-critic/go-critic/issues/926
-    - text: "unnecessaryDefer:"
-      linters:
-      - gocritic
     - text: "unnamedResult:"
       linters:
-      - gocritic
-    - path: \.resolvers\.go
-      text: "typeDefFirst:"
-      linters:
-      - gocritic
-    - path: \.resolvers\.go
-      text: "paramTypeCombine:"
-      linters:
-      - gocritic
-    - path: \.resolvers\.go
-      text: "hugeParam:"
-      linters:
-      - gocritic
-    - text: "G404"
-      linters:
-      - gosec
-
-run:
-  timeout: 5m
-  skip-dirs:
-  - pkg/testharness/testdata
+        - gocritic
